tests/baselines/reference/parserExportAssignment1.errors.txt
tests/cases/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment1.ts(1,10): error TS2304: Cannot find name 'foo'.


==== tests/cases/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment1.ts (1 errors) ====
    export = foo
             ~~~
!!! error TS2304: Cannot find name 'foo'.